Add Procedure for Butter Chicken

--- a/odin-recipes/recipes/butter-chicken.html
+++ b/odin-recipes/recipes/butter-chicken.html
@@ -66,5 +66,50 @@
         </p>
     
     
+        <h2> <strong>
+        Ingredients
+        </strong> </h2>
+        <p>
+        <ol>
+        <li>Combine the chicken with its listed ingredients to marinate
+            for at least 30 minutes (preferably overnight),
+        </li>
+        <li>Heat olive oil in a skillet at medium-high heat; once sizzling
+            add chicken in small batches to prevent crowding. Fry chicken
+            until golden brown with mild charring (approx. 5 minutes each
+            side). Set aside on a plate.
+        </li>
+        <li>
+            Heat the ghee in the skillet and, once sizzling, fry onions
+            for 5 minutes. Scrape the browned bits left on the skillet
+            while sweating the onions.
+        </li>
+        <li>
+            Add the garlic and ginger pastes, sauté for a minute then add
+            powdered spices (coriander, cumin, garam masala, chili powder).
+            Stir until well incorporated and fragrant.
+        </li>
+        <li>
+            Add the crushed tomatoes and salt. Gently mash the tomatoes as
+            the sauce thickens for around 15 minutes.
+        </li>
+        <li>
+            Insert immersion blender OR cool the sauce and transfer into a
+            kitchen blender. Blend until smooth then strain the sauce into
+            a pot.
+        </li>
+        <li>
+            Stir in the cream, sugar and kasoori methi. Adjust thickness
+            by adding water, if needed. Once warm, transfer the chicken
+            into the pot. Cover the pot and let simmer for an additional
+            10 minutes.
+        </li>
+        <li>
+            Garnish with fresh cilantro and cream. Serve hot with jeera
+            rice or naan bread.
+        </li>
+        </ol>
+        </p>
+
 </body>
 </html>
