Update Index with Hyperlinks

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <h1>
-    Odin Recipes
+    Basic Indian Recipes
     </h1>
+    <p>
+    <a  href=   "./recipes/butter-chicken.html">
+        Butter Chicken
+    </a>
+    </p>
+    <p>
+    <a  href=   "./recipes/jeera-rice.html">
+        Jeera Rice
+    </a>
+    </p>
 </body>
 </html>
