Update Recipes to Include Image Credit

--- a/odin-recipes/recipes/butter-chicken.html
+++ b/odin-recipes/recipes/butter-chicken.html
@@ -20,6 +20,7 @@
         buttery tomato gravy.
 
         Recipe from <a href= "https://cafedelites.com/butter-chicken/"> Cafe Delites</a>
+        Image from Cooking Classy.
         </p>
 
         <h2> <strong>
