Complete CSS Foundations *** Completed Ch 5: CSS Foundations and further reogranized the files to ensure consistency in naming conventions.

--- a/05-introduction-to-css/05-01-foundations/05-01-02-class-id-selectors.html
+++ b/05-introduction-to-css/05-01-foundations/05-01-02-class-id-selectors.html
@@ -12,23 +12,18 @@
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
     <link   rel         =   "stylesheet"           
-            href        =   "03-styles.css"                                                             >
+            href        =   "05-01-02-styles.css"                                                       >
 
     <title>
-    05.01.03
+    05.01.02
     </title>
 </head>
 
 <body>
-    <button class= "click"
-            style=" color           : white  ;
-                    background-color: black  ;">    
-    Click Me!
-    </button>
-    <button class= "click"
-            style= "color           : black  ;
-                    background-color: yellow ;">
-            No, Click Me!
-    </button>
+    <div class  =   "base"      >Number 1 - I'm a class!            </div>
+    <div id     =   "one"       >Number 2 - I'm one ID.             </div>
+    <div class  =   "base cool" >Number 3 - I'm a class, but cooler.</div>
+    <div id     =   "two"       >Number 4 - I'm another ID.         </div>
+    <div class  =   "base"      >Number 5 - I'm a class!            </div>
 </body>
 </html>
