--- a/05-introduction-to-css/05-01-foundations/05-01-03-grouping-selectors.html
+++ b/05-introduction-to-css/05-01-foundations/05-01-03-grouping-selectors.html
@@ -12,21 +12,23 @@
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
     <link   rel         =   "stylesheet"           
-            href        =   "04-styles.css"                                                             >
+            href        =   "05-01-03-styles.css"                                                       >
 
     <title>
-    05.01.04
+    05.01.03
     </title>
 </head>
 
 <body>
-    <div>
-    <img class="avatar proportioned"    src="pexels-katho-mutodo-8434791.jpeg"        alt="">
-    <img class="avatar distorted"       src="pexels-andrea-piacquadio-3777931.jpeg"   alt="">
-    </div>
-    <div>
-    <img class="original proportioned"  src="pexels-katho-mutodo-8434791.jpeg"        alt="">
-    <img class="original distorted"     src="pexels-andrea-piacquadio-3777931.jpeg"   alt="">
-    </div>
+    <button class= "click"
+            style=" color           : white  ;
+                    background-color: black  ;">    
+    Click Me!
+    </button>
+    <button class= "click"
+            style= "color           : black  ;
+                    background-color: yellow ;">
+            No, Click Me!
+    </button>
 </body>
 </html>
