--- a/05-introduction-to-css/05-01-foundations/05-01-06-cascade-fix.html
+++ b/05-introduction-to-css/05-01-foundations/05-01-06-cascade-fix.html
@@ -12,18 +12,22 @@
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
     <link   rel         =   "stylesheet"           
-            href        =   "02-styles.css"                                                             >
+            href        =   "05-01-06-styles.css"                                                       >
 
     <title>
-    05.01.02
+    05.01.06
     </title>
 </head>
 
 <body>
-    <div class  =   "base"      >Number 1 - I'm a class!            </div>
-    <div id     =   "one"       >Number 2 - I'm one ID.             </div>
-    <div class  =   "base cool" >Number 3 - I'm a class, but cooler.</div>
-    <div id     =   "two"       >Number 4 - I'm another ID.         </div>
-    <div class  =   "base"      >Number 5 - I'm a class!            </div>
+    <p      class   =   "para"             >I'm just a paragraph with red text!         </p>
+    <p      class   =   "para small-para"  >I'm a smaller paragraph, also with red text!</p>
+
+    <button id      =   "confirm-button"    class="button confirm"  >Confirm</button>
+    <button id      =   "cancel-button"     class="button cancel"   >Cancel </button>
+
+    <div    class   =   "text"           >I'm a div with green text!                 </div>
+    <div    class   =   "text"           >I'm a div with green text and a child div! </div>
+    <div    class   =   "text child"     >I'm a smaller child div with red text.     </div>
 </body>
 </html>
