--- a/05-introduction-to-css/05-04-margins-and-padding/index.html
+++ b/05-introduction-to-css/05-04-margins-and-padding/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE   html                                                                                        >
 <html       lang        =   "en"                                                                        >
-
+    
 <head>
     <meta   charset     =   "utf-8"                                                                     >
     <meta   http-equiv  =   "X-UA-Compatible"
@@ -11,28 +11,19 @@
             content     =   ""                                                                          >
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
-    <link   rel         =   "stylesheet"           
+    <link   rel         =   "stylesheet"        
             href        =   "01-styles.css"                                                             >
-    <style> p           {   color           : white   ;
-                            background-color: green   ;
-                            font-size       : 18px      ;}
-    </style>
+
     <title>
-    05.01.01
+    Homepage
     </title>
 </head>
 
 <body>
-    <div>
-        Style me via the external method!
-    </div>
-    <p>
-        I would like to be styled with the internal method, please.
-    </p>
-    <button style=" color           : black   ;
-                    background-color: orange  ;
-                    font-size       : 18px      ;" >
-        Inline Method
-    </button>
+    <h1>CSS Margins and Padding: Exercises</h1> 
+    <ol>
+        <li><a      href=   "05-04-01-margins-and-padding.html" > Exercise 1 </li>
+        <li><a      href=   "05-04-02-margins-and-padding.html" > Exercise 2 </li>
+    </ol>
 </body>
 </html>
