--- a/04-introduction-to-html/04-08-recipes/index.html
+++ b/04-introduction-to-html/04-08-recipes/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE   html                                                                                        >
+<html       lang        =   "en"                                                                        >
+    
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href= "styles.css">
+    <meta   charset     =   "utf-8"                                                                     >
+    <meta   http-equiv  =   "X-UA-Compatible"
+            content     =   "IE=edge"                                                                   >
+    <meta   name        =   "viewport"          
+            content     =   "width=device-width, initial-scale=1.0"                                     >
+    <meta   name        =   "description"       
+            content     =   ""                                                                          >
+    <meta   name        =   "viewport"          
+            content     =   "width=device-width, initial-scale=1"                                       >
+    <link   rel         =   "stylesheet"        
+            href        =   "04-08-styles.css"                                                          >
+
+    <title>
+    The Odin Recipes
+    </title>
 </head>
 <body>
     <h1>
