--- a/05-introduction-to-css/05-01-foundations/05-01-01-css-methods.html
+++ b/05-introduction-to-css/05-01-foundations/05-01-01-css-methods.html
@@ -1,6 +1,6 @@
 <!DOCTYPE   html                                                                                        >
 <html       lang        =   "en"                                                                        >
-    
+
 <head>
     <meta   charset     =   "utf-8"                                                                     >
     <meta   http-equiv  =   "X-UA-Compatible"
@@ -11,17 +11,28 @@
             content     =   ""                                                                          >
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
-    <link   rel         =   "stylesheet"        
-            href        =   "01-styles.css"                                                             >
-
+    <link   rel         =   "stylesheet"           
+            href        =   "05-01-01-styles.css"                                                       >
+    <style> p           {   color           : white   ;
+                            background-color: green   ;
+                            font-size       : 18px      ;}
+    </style>
     <title>
-    05.03.01
+    05.01.01
     </title>
 </head>
 
 <body>
-    <div class  =   "one"   >   DIV ONE     </div>
-    <div class  =   "two"   >   DIV TWO     </div>
-    <div class  =   "three" >   DIV THREE   </div>
+    <div>
+        Style me via the external method!
+    </div>
+    <p>
+        I would like to be styled with the internal method, please.
+    </p>
+    <button style=" color           : black   ;
+                    background-color: orange  ;
+                    font-size       : 18px      ;" >
+        Inline Method
+    </button>
 </body>
 </html>
