--- a/05-introduction-to-css/05-01-foundations/05-01-04-chaining-selectors.html
+++ b/05-introduction-to-css/05-01-foundations/05-01-04-chaining-selectors.html
@@ -12,22 +12,21 @@
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
     <link   rel         =   "stylesheet"           
-            href        =   "06-styles.css"                                                             >
+            href        =   "05-01-04-styles.css"                                                       >
 
     <title>
-    05.01.06
+    05.01.04
     </title>
 </head>
 
 <body>
-    <p      class   =   "para"             >I'm just a paragraph with red text!         </p>
-    <p      class   =   "para small-para"  >I'm a smaller paragraph, also with red text!</p>
-
-    <button id      =   "confirm-button"    class="button confirm"  >Confirm</button>
-    <button id      =   "cancel-button"     class="button cancel"   >Cancel </button>
-
-    <div    class   =   "text"           >I'm a div with green text!                 </div>
-    <div    class   =   "text"           >I'm a div with green text and a child div! </div>
-    <div    class   =   "text child"     >I'm a smaller child div with red text.     </div>
+    <div>
+    <img class="avatar proportioned"    src="pexels-katho-mutodo-8434791.jpeg"        alt="">
+    <img class="avatar distorted"       src="pexels-andrea-piacquadio-3777931.jpeg"   alt="">
+    </div>
+    <div>
+    <img class="original proportioned"  src="pexels-katho-mutodo-8434791.jpeg"        alt="">
+    <img class="original distorted"     src="pexels-andrea-piacquadio-3777931.jpeg"   alt="">
+    </div>
 </body>
 </html>
