--- a/05-introduction-to-css/05-01-foundations/05-01-05-descendant-combinator.html
+++ b/05-introduction-to-css/05-01-foundations/05-01-05-descendant-combinator.html
@@ -1,6 +1,6 @@
 <!DOCTYPE   html                                                                                        >
 <html       lang        =   "en"                                                                        >
-    
+
 <head>
     <meta   charset     =   "utf-8"                                                                     >
     <meta   http-equiv  =   "X-UA-Compatible"
@@ -11,19 +11,30 @@
             content     =   ""                                                                          >
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
-    <link   rel         =   "stylesheet"        
-            href        =   "01-styles.css"                                                             >
+    <link   rel         =   "stylesheet"           
+            href        =   "05-01-05-styles.css"                                                       >
 
     <title>
-    Homepage
+    05.01.05
     </title>
 </head>
 
 <body>
-    <h1>CSS Margins and Padding: Exercises</h1> 
-    <ol>
-        <li><a      href=   "01-margins-and-padding.html"   > Exercise 1 </li>
-        <li><a      href=   "02-margins-and-padding.html"   > Exercise 2 </li>
-    </ol>
+    <div    class= "box"> 
+        <p  class= "txt">
+        This should be styled.</p>
+    </div>
+        <p>
+        This should not be styled.</p>
+        <p>
+        This should not be styled.</p>
+    <div    class= "box"> 
+        <p  class= "txt">
+        This should be styled.</p>
+        </div>
+    <div    class= "box"> 
+        <p  class= "txt">
+        This should be styled.</p>
+        </div>
 </body>
 </html>
