--- a/05-introduction-to-css/05-01-foundations/index.html
+++ b/05-introduction-to-css/05-01-foundations/index.html
@@ -24,12 +24,12 @@
 <body>
     <h1>CSS Foundations: Exercises</h1> 
     <ol>
-        <li><a      href=   "01-css-methods.html"           > Exercise 1 </li>
-        <li><a      href=   "02-class-id-selectors.html"    > Exercise 2 </li>
-        <li><a      href=   "03-grouping-selectors.html"    > Exercise 3 </li>
-        <li><a      href=   "04-chaining-selectors.html"    > Exercise 4 </li>
-        <li><a      href=   "05-descendant-combinator.html" > Exercise 5 </li>
-        <li><a      href=   "06-cascade-fix.html"           > Exercise 6 </li>
+        <li><a      href=   "05-01-01-css-methods.html"                 > Exercise 1 </li>
+        <li><a      href=   "05-01-02-class-id-selectors.html"          > Exercise 2 </li>
+        <li><a      href=   "05-01-03-grouping-selectors.html"          > Exercise 3 </li>
+        <li><a      href=   "05-01-04-chaining-selectors.html"          > Exercise 4 </li>
+        <li><a      href=   "05-01-05-descendant-combinator.html"       > Exercise 5 </li>
+        <li><a      href=   "05-01-06-cascade-fix.html"                 > Exercise 6 </li>
     </ol>
     
 </body>
