--- a/05-introduction-to-css/05-04-margins-and-padding/05-04-01-margins-and-padding.html
+++ b/05-introduction-to-css/05-04-margins-and-padding/05-04-01-margins-and-padding.html
@@ -1,6 +1,6 @@
 <!DOCTYPE   html                                                                                        >
 <html       lang        =   "en"                                                                        >
-
+    
 <head>
     <meta   charset     =   "utf-8"                                                                     >
     <meta   http-equiv  =   "X-UA-Compatible"
@@ -11,30 +11,17 @@
             content     =   ""                                                                          >
     <meta   name        =   "viewport"          
             content     =   "width=device-width, initial-scale=1"                                       >
-    <link   rel         =   "stylesheet"           
-            href        =   "05-styles.css"                                                             >
+    <link   rel         =   "stylesheet"        
+            href        =   "05-04-01-styles.css"                                                       >
 
     <title>
-    05.01.05
+    05.03.01
     </title>
 </head>
 
 <body>
-    <div    class= "box"> 
-        <p  class= "txt">
-        This should be styled.</p>
-    </div>
-        <p>
-        This should not be styled.</p>
-        <p>
-        This should not be styled.</p>
-    <div    class= "box"> 
-        <p  class= "txt">
-        This should be styled.</p>
-        </div>
-    <div    class= "box"> 
-        <p  class= "txt">
-        This should be styled.</p>
-        </div>
+    <div class  =   "one"   >   DIV ONE     </div>
+    <div class  =   "two"   >   DIV TWO     </div>
+    <div class  =   "three" >   DIV THREE   </div>
 </body>
 </html>
